--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "phpunit/phpunit": "^11.3",
         "rector/rector": "^1.2",
         "rregeer/phpunit-coverage-check": "^0.3.1",
+        "scrutinizer/ocular": "^1.9",
         "shipmonk/composer-dependency-analyser": "^1.7"
     },
     "autoload": {
