--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
     "require": {
         "php": "^8.3",
         "ext-mbstring": "*",
+        "ext-tokenizer": "*",
         "psr/simple-cache": "^3.0"
     },
     "require-dev": {
